--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "HedgeLib"]
 	path = HedgeLib
-	url = https://github.com/Radfordhound/HedgeLib
+	url = https://github.com/SKmaric/HedgeLib
