New implementation for outputting Generations XML
Conversion code is now separate from the HedgeLib dependancy.

--- a/SonicColorsSetEditor/SonicColorsSetEditor.csproj
+++ b/SonicColorsSetEditor/SonicColorsSetEditor.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AddParamForm.Designer.cs">
       <DependentUpon>AddParamForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="GenerationsConvert.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="CPKMaker.cs" />
     <Compile Include="EditParamForm.cs">
