--- a/SonicColorsSetEditor/SonicColorsSetEditor.csproj
+++ b/SonicColorsSetEditor/SonicColorsSetEditor.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -80,6 +83,12 @@
     <Compile Include="SelectStageForm.Designer.cs">
       <DependentUpon>SelectStageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WaitCPKBuildForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaitCPKBuildForm.Designer.cs">
+      <DependentUpon>WaitCPKBuildForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddParamForm.resx">
       <DependentUpon>AddParamForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -105,6 +114,9 @@
     <EmbeddedResource Include="SelectStageForm.resx">
       <DependentUpon>SelectStageForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="WaitCPKBuildForm.resx">
+      <DependentUpon>WaitCPKBuildForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -123,6 +135,9 @@
       <Project>{eeb16fca-ff9f-40b5-9d43-f2460aa930c8}</Project>
       <Name>HedgeLib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
